Closed Bug 900964 Opened 11 years ago Closed 11 years ago

GLContext::GLErrorToString should be static

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla25

People

(Reporter: guillaume.abadie, Assigned: guillaume.abadie)

References

Details

Attachments

(1 file)

GLContext::GLErrorToString should be static
Attached patch patch revision 1Splinter Review
Attachment #785017 - Flags: review?(bjacob)
Attachment #785017 - Flags: review?(bjacob) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/ba01dc47edc3
Target Milestone: --- → mozilla25
https://hg.mozilla.org/mozilla-central/rev/ba01dc47edc3
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: