bug 900964 - GLContext::GLErrorToString changed to a static function - r=bjacob